Fixed thousands of checkstyle errors. No application logic was changed
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@764356 13f79535-47bb-0310-9956-ffa450edef68